--- a/links.html
+++ b/links.html
@@ -108,8 +108,7 @@
             🐙 GitHub
         </a>
 
-        <a href="www.linkedin.com/in/
-lucky-om" class="link-btn" target="_blank">
+        <a href="www.linkedin.com/in/lucky-om" class="link-btn" target="_blank">
             💼 LinkedIn
         </a>
 
